2004-10-12	Benedikt Meurer <benny@xfce.org>
	* configure.ac: Version 0.1.2.
	* m4/debug.m4: Added linker optimizations if --enable-final is
	  given (recent GNU binutils required).




(Old svn revision: 16521)

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -1,4 +1,5 @@
 INCLUDES = 								\
+	-I$(top_srcdir)							\
 	-DDBUS_API_SUBJECT_TO_CHANGE					\
 	-DEXO_API_SUBJECT_TO_CHANGE					\
 	-DEXO_COMPILATION						\
