--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ endif
 config.status: configure
 	
 	dh_testdir
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --sysconfdir=/etc
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --sysconfdir=/etc --enable-final
 
 build: build-stamp
 build-stamp: config.status
