2004-11-11	Benedikt Meurer <benny@xfce.org>
	* exo/exo-string.c(exo_str_is_equal): Avoid call to strcmp here.
	* configure.ac, exo/exo-toolbars-model.c: Elide the dependency on
	  libxml-2.0. Replaced with a GLib based XML parser.
	* configure.ac, m4/gtk-doc.m4, docs/: Added initial API reference
	  documentation for libexo.




(Old svn revision: 16528)

--- a/configure.ac
+++ b/configure.ac
@@ -56,16 +56,20 @@ dnl Check for required packages
 BM_DEPEND([DBUS], [dbus-glib-1], [0.22])
 BM_DEPEND([GTK], [gtk+-2.0], [2.4.0])
 BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.1.24])
-BM_DEPEND([LIBXML], [libxml-2.0], [2.4.0])
 
 dnl Check for session management libraries
 BM_LIBSM
+
+dnl Check for gtk-doc
+GTK_DOC_CHECK([1.0])
 
 dnl Check for debugging support
 BM_DEBUG_SUPPORT
 
 AC_OUTPUT([
 Makefile
+docs/version.xml
+docs/Makefile
 exo/exo-0.1.pc
 exo/Makefile
 ])
