2004-11-12	Benedikt Meurer <benny@xfce.org>
	* configure.ac, NEWS: Version 0.1.3.
	* exo/exo-config.h.in, exo/exo-config.c, exo/exo.h, docs/exo-docs.sgml,
	  docs/tmpl/exo-config.sgml, docs/exo-sections.txt: Added
	  `Version Information' variables and macros similar to what
	  we use in Xfce and Gtk+.
	* m4/debug.m4: --enable-final is now on by default for plattforms
	  that support it.
	* exo/exo-toolbars-model.c(exo_toolbars_model_real_add_item): Always
	  check if the action is valid.




(Old svn revision: 16529)

--- a/Makefile.in
+++ b/Makefile.in
@@ -121,6 +121,9 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBEXO_VERINFO = @LIBEXO_VERINFO@
+LIBEXO_VERSION_MAJOR = @LIBEXO_VERSION_MAJOR@
+LIBEXO_VERSION_MICRO = @LIBEXO_VERSION_MICRO@
+LIBEXO_VERSION_MINOR = @LIBEXO_VERSION_MINOR@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBSM_CFLAGS = @LIBSM_CFLAGS@
