--- a/docs/Makefile.in
+++ b/docs/Makefile.in
@@ -97,6 +97,9 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBEXO_VERINFO = @LIBEXO_VERINFO@
+LIBEXO_VERSION_MAJOR = @LIBEXO_VERSION_MAJOR@
+LIBEXO_VERSION_MICRO = @LIBEXO_VERSION_MICRO@
+LIBEXO_VERSION_MINOR = @LIBEXO_VERSION_MINOR@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBSM_CFLAGS = @LIBSM_CFLAGS@
@@ -421,7 +424,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-info-am
+uninstall-am: uninstall-info-am uninstall-local
 
 .PHONY: all all-am all-local check check-am clean clean-generic \
 	clean-libtool clean-local dist-hook distclean \
@@ -433,7 +436,7 @@ uninstall-am: uninstall-info-am
 	maintainer-clean maintainer-clean-generic \
 	maintainer-clean-local mostlyclean mostlyclean-generic \
 	mostlyclean-libtool pdf pdf-am ps ps-am uninstall uninstall-am \
-	uninstall-info-am
+	uninstall-info-am uninstall-local
 
 
 @ENABLE_GTK_DOC_TRUE@all-local: html-build.stamp
@@ -512,6 +515,9 @@ install-data-local:
 	  echo '-- Installing $(srcdir)/html/index.sgml' ; \
 	  $(INSTALL_DATA) $(srcdir)/html/index.sgml $(DESTDIR)$(TARGET_DIR); \
 	fi)
+
+uninstall-local:
+	rm -f $(DESTDIR)$(TARGET_DIR)/*
 
 #
 # Require gtk-doc when making dist
