--- a/exo/Makefile.in
+++ b/exo/Makefile.in
@@ -42,7 +42,8 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = exo
 DIST_COMMON = $(libexoinclude_HEADERS) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(srcdir)/exo-0.1.pc.in
+	$(srcdir)/Makefile.in $(srcdir)/exo-0.1.pc.in \
+	$(srcdir)/exo-config.h.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/X11.m4 \
 	$(top_srcdir)/m4/debug.m4 $(top_srcdir)/m4/depends.m4 \
@@ -52,7 +53,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = exo-0.1.pc
+CONFIG_CLEAN_FILES = exo-0.1.pc exo-config.h
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
     $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
@@ -64,7 +65,8 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(pkgconfigdir)" \
 libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libexo_0_1_la_DEPENDENCIES =
-am_libexo_0_1_la_OBJECTS = libexo_0_1_la-exo-dbus.lo \
+am_libexo_0_1_la_OBJECTS = libexo_0_1_la-exo-config.lo \
+	libexo_0_1_la-exo-dbus.lo \
 	libexo_0_1_la-exo-ellipsized-label.lo \
 	libexo_0_1_la-exo-file-watch.lo \
 	libexo_0_1_la-exo-gdk-pixbuf-extensions.lo \
@@ -146,6 +148,9 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBEXO_VERINFO = @LIBEXO_VERINFO@
+LIBEXO_VERSION_MAJOR = @LIBEXO_VERSION_MAJOR@
+LIBEXO_VERSION_MICRO = @LIBEXO_VERSION_MICRO@
+LIBEXO_VERSION_MINOR = @LIBEXO_VERSION_MINOR@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBSM_CFLAGS = @LIBSM_CFLAGS@
@@ -236,6 +241,7 @@ lib_LTLIBRARIES = libexo-0.1.la
 libexoincludedir = $(includedir)/exo-0.1/exo
 libexoinclude_HEADERS = \
 	exo.h								\
+	exo-config.h							\
 	exo-dbus.h							\
 	exo-ellipsized-label.h						\
 	exo-file-watch.h						\
@@ -256,6 +262,7 @@ libexoinclude_HEADERS = \
 
 libexo_0_1_la_SOURCES = \
 	$(libexo_HEADERS)						\
+	exo-config.c							\
 	exo-dbus.c							\
 	exo-ellipsized-label.c						\
 	exo-file-watch.c						\
@@ -296,6 +303,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = exo-0.1.pc
 EXTRA_DIST = \
 	$(pkgconfig_DATA)						\
+	exo-config.h.in							\
 	exo-marshal.list
 
 all: all-am
@@ -333,6 +341,8 @@ $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 exo-0.1.pc: $(top_builddir)/config.status $(srcdir)/exo-0.1.pc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+exo-config.h: $(top_builddir)/config.status $(srcdir)/exo-config.h.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-libLTLIBRARIES: $(lib_LTLIBRARIES)
 	@$(NORMAL_INSTALL)
 	test -z "$(libdir)" || $(mkdir_p) "$(DESTDIR)$(libdir)"
@@ -369,6 +379,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libexo_0_1_la-exo-config.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libexo_0_1_la-exo-dbus.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libexo_0_1_la-exo-ellipsized-label.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libexo_0_1_la-exo-file-watch.Plo@am__quote@
@@ -409,6 +420,13 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
+
+libexo_0_1_la-exo-config.lo: exo-config.c
+@am__fastdepCC_TRUE@	if $(LIBTOOL) --mode=compile --tag=CC $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libexo_0_1_la_CFLAGS) $(CFLAGS) -MT libexo_0_1_la-exo-config.lo -MD -MP -MF "$(DEPDIR)/libexo_0_1_la-exo-config.Tpo" -c -o libexo_0_1_la-exo-config.lo `test -f 'exo-config.c' || echo '$(srcdir)/'`exo-config.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libexo_0_1_la-exo-config.Tpo" "$(DEPDIR)/libexo_0_1_la-exo-config.Plo"; else rm -f "$(DEPDIR)/libexo_0_1_la-exo-config.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='exo-config.c' object='libexo_0_1_la-exo-config.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --mode=compile --tag=CC $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libexo_0_1_la_CFLAGS) $(CFLAGS) -c -o libexo_0_1_la-exo-config.lo `test -f 'exo-config.c' || echo '$(srcdir)/'`exo-config.c
 
 libexo_0_1_la-exo-dbus.lo: exo-dbus.c
 @am__fastdepCC_TRUE@	if $(LIBTOOL) --mode=compile --tag=CC $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libexo_0_1_la_CFLAGS) $(CFLAGS) -MT libexo_0_1_la-exo-dbus.lo -MD -MP -MF "$(DEPDIR)/libexo_0_1_la-exo-dbus.Tpo" -c -o libexo_0_1_la-exo-dbus.lo `test -f 'exo-dbus.c' || echo '$(srcdir)/'`exo-dbus.c; \
